header and navbar missalignment fixed at critical screenwidths 640px and 520 px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,12 +339,22 @@ i {
 }
 
 @media screen and (max-width: 640px) {
-    
+    nav div>div {
+        display: inline-block;
+        vertical-align: top;
+        text-align: center;
+        width: 25vw;
+        padding: 0px 20px 0px 20px;
+        z-index: 10;
+    }
 }
 
 @media screen and (max-width: 520px) {
     body {
         font-size:smaller;
+    }
+    header {
+        height: 118px;
     }
     .navbar {
         margin: 118px 0px 0px 0px;
